# returncraft

./: MANIFEST.txt  README.md  pyproject.toml  requirements.txt  streamlit_app.py
data/: example_case_001.json  example_case_003.json  synthetic_cases.jsonl
demo/example_reviews/: case_001_review.json
docs/: abstention-policy.md  critique-and-fixes.md  demo-script.md  fairness-risks.md  policy-model.md  portfolio-presentation-notes.md  problem-framing.md
eval/goldens/: review_cases.jsonl
eval/rubrics/: citation_quality.md  fairness_checks.md
policies/: policy_index.json  policy_v1.md  policy_v2.md
schemas/: case_input.schema.json  review_output.schema.json
src/returncraft/: __init__.py  cli.py  eval_runner.py  logic.py  pipeline.py  utils.py  validator.py
tests/: test_review.py
