
[build-system]
requires = ["setuptools>=61", "jsonschema>=4.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "returncraft"
version = "0.1.0"
description = "Policy-grounded returns/refunds exception review"
requires-python = ">=3.10"
dependencies = ["streamlit>=1.30.0", "jsonschema>=4.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
